--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -3944,6 +3944,11 @@ input.tab:checked + .tab-content,
   margin-bottom: 2.25rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .\!mt-0 {
   margin-top: 0px !important;
 }
@@ -4066,6 +4071,10 @@ input.tab:checked + .tab-content,
 
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-5 {
@@ -5647,6 +5656,10 @@ input.tab:checked + .tab-content,
   vertical-align: top;
 }
 
+.align-middle {
+  vertical-align: middle;
+}
+
 .align-bottom {
   vertical-align: bottom;
 }
@@ -7125,21 +7138,22 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   --tw-gradient-stops: var(--tw-gradient-from), #67e8f9 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-.hover\:to-primary\/60:hover {
-  --tw-gradient-to: rgb(var(--color-primary) / 0.6) var(--tw-gradient-to-position);
+.hover\:to-primary\/80:hover {
+  --tw-gradient-to: rgb(var(--color-primary) / 0.8) var(--tw-gradient-to-position);
 }
 
 .hover\:to-teal-100:hover {
   --tw-gradient-to: #ccfbf1 var(--tw-gradient-to-position);
 }
 
-.hover\:to-primary\/80:hover {
-  --tw-gradient-to: rgb(var(--color-primary) / 0.8) var(--tw-gradient-to-position);
-}
-
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:text-content:hover {
+  --tw-text-opacity: 1;
+  color: rgb(var(--color-content) / var(--tw-text-opacity));
 }
 
 .hover\:text-content\/70:hover {
@@ -7173,19 +7187,9 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
-.hover\:text-tertiary:hover {
-  --tw-text-opacity: 1;
-  color: rgb(var(--color-tertiary) / var(--tw-text-opacity));
-}
-
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-content:hover {
-  --tw-text-opacity: 1;
-  color: rgb(var(--color-content) / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -7224,9 +7228,29 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:shadow-sm:hover {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:outline-none:hover {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.hover\:blur-xs:hover {
+  --tw-blur: blur(2px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:brightness-125:hover {
+  --tw-brightness: brightness(1.25);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:filter:hover {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .hover\:before\:opacity-10:hover::before {
